<resources>
    <string name="app_name">LegoStore</string>
    <string name="welcome">¡Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="version">Versión %1$s</string>
    <string name="email_is_empty">You must enter the email</string>
    <string name="password_is_empty">You must enter the password</string>
    <string name="user_not_exist">User not exist</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="search">Search…</string>
    <string name="product_name">Product name</string>
    <string name="product_price_zero">$0</string>
    <string name="add">Add</string>
    <string name="zero">0</string>
    <string name="service_response_error">Service response error</string>
    <string name="type_of_error_in_the_service_response">Error %1$s in %2$s service</string>
    <string name="product_out_of_stock">Product out of stock</string>
    <string name="form_product_description">&lt;b>Product description:&lt;/b> %1$s</string>
    <string name="product_without_description">Product without description</string>
    <string name="form_product_price"><b>Product price:</b></string>
    <string name="form_available_stock"><b>Available stock:</b></string>
    <string name="buy">Buy</string>
    <string name="successful_purchase">Successful purchase</string>
</resources>