<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@color/transparent"
            android:adjustViewBounds="true"

            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            android:contentDescription="@string/product_name" />

        <ImageView
            android:id="@+id/imageView_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            android:src="@drawable/ic_bag"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@id/textView_product_name"
            app:layout_constraintStart_toStartOf="@id/textView_product_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textView_product_name"
            android:contentDescription="@string/product_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_product"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_product_name"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_product_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/form_product_description"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textView_title_product_price"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_title_product_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/form_product_price"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/textView_product_description"
                    app:layout_constraintTop_toBottomOf="@id/textView_product_description"
                    app:layout_constraintEnd_toStartOf="@id/textView_product_price"
                    app:layout_constraintBottom_toTopOf="@id/textView_title_available_stock"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_product_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_zero"
                    android:textAlignment="textEnd"

                    app:layout_constraintStart_toEndOf="@id/textView_title_product_price"
                    app:layout_constraintTop_toTopOf="@id/textView_title_product_price"
                    app:layout_constraintEnd_toEndOf="@id/textView_product_description"
                    app:layout_constraintBottom_toBottomOf="@id/textView_title_product_price"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_title_available_stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/form_available_stock"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/textView_title_product_price"
                    app:layout_constraintTop_toBottomOf="@id/textView_title_product_price"
                    app:layout_constraintEnd_toStartOf="@id/textView_available_stock"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_available_stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAlignment="textEnd"

                    app:layout_constraintStart_toEndOf="@id/textView_title_available_stock"
                    app:layout_constraintTop_toTopOf="@id/textView_title_available_stock"
                    app:layout_constraintEnd_toEndOf="@id/textView_product_price"
                    app:layout_constraintBottom_toBottomOf="@id/textView_title_available_stock"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>