<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"

        android:src="@drawable/lego"
        app:layout_constraintBottom_toTopOf="@id/guideline_cardView_one"
        app:layout_constraintEnd_toEndOf="@id/guideline_logo_two"
        app:layout_constraintStart_toStartOf="@id/guideline_logo_one"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_cardView_one">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_fields_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rajdhani_bold"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/layout_username"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"

                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_fields_two"
                app:layout_constraintStart_toStartOf="@id/guideline_fields_one"
                app:layout_constraintBottom_toTopOf="@id/layout_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:inputType="textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"

                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/layout_username"
                app:layout_constraintStart_toStartOf="@id/layout_username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_log_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"

                app:elevation="4dp"
                app:layout_constraintEnd_toEndOf="@id/layout_password"
                app:layout_constraintStart_toStartOf="@id/layout_password"
                app:layout_constraintTop_toBottomOf="@id/layout_password" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_fields_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/version"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_cardView_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>